fix: text improvements, removed scrollbar on modal opening , added tags on card

--- a/src/layout/css/_Modal.scss
+++ b/src/layout/css/_Modal.scss
@@ -16,5 +16,9 @@
 
 .modal {
   padding-top: 10px !important;
-  overflow-x: scroll !important;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
